feat: Adjust secondary color and hover effect
Updates the `--color-secondary` CSS variable from a light lilac to a soft pink.
Also adjusts the `--color-primary:hover` background color to a darker shade of the new soft pink, maintaining brand aesthetic consistency.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         --color-text: #515151;
         --color-primary: #222020; /* Black for primary text */
         --color-primary-dark: #333333;
-        --color-secondary: #F2E7FE; /* Light lilac from user screenshot */
+        --color-secondary: #FAEAF8; /* Soft pink inspired by brand colors */
         --color-accent: #222020;
         --font-body: 'Inter', sans-serif;
         --font-heading: 'Raleway', 'sans-serif';
@@ -65,7 +65,7 @@
         box-shadow: 0 2px 4px rgba(0,0,0,0.05);
       }
       .btn-primary:hover {
-        background-color: #E8D9FF; /* Darker shade of new purple */
+        background-color: #F5D5F1; /* Darker shade of soft pink */
         transform: translateY(-2px);
         box-shadow: 0 4px 8px rgba(0,0,0,0.1);
       }
