feat: Update brand colors and text
Adjusts brand colors in the theme configuration and CSS variables to use lighter shades of purple and lilac. This change improves the visual consistency and aesthetic of the UI elements, particularly buttons and selected states, aligning them with the overall brand identity.

Additionally, updates text colors for buttons and badges to ensure better contrast and readability against the new background colors.

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         theme: {
           extend: {
             colors: {
-              'brand-purple': '#E54ED9',
-              'brand-purple-dark': '#D633C6',
+              'brand-purple': '#F4D9FF',
+              'brand-purple-dark': '#E9D5FF',
               'brand-bg-subtle': '#F9F9F9',
               'brand-primary': '#222020',
             },
@@ -36,7 +36,7 @@
         --color-text: #515151;
         --color-primary: #222020; /* Black for primary text */
         --color-primary-dark: #333333;
-        --color-secondary: #FAEAF8; /* Soft pink inspired by brand colors */
+        --color-secondary: #F4D9FF; /* Very soft pink/lilac from user image */
         --color-accent: #222020;
         --font-body: 'Inter', sans-serif;
         --font-heading: 'Raleway', 'sans-serif';
@@ -65,7 +65,7 @@
         box-shadow: 0 2px 4px rgba(0,0,0,0.05);
       }
       .btn-primary:hover {
-        background-color: #F5D5F1; /* Darker shade of soft pink */
+        background-color: #E9D5FF; /* Darker shade of soft lilac */
         transform: translateY(-2px);
         box-shadow: 0 4px 8px rgba(0,0,0,0.1);
       }
